--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "schema": "json2ts -i 'schemas/**/*.json' -o src/types"
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.0",
@@ -30,6 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.3",
+    "json-schema-to-typescript": "^15.0.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
